--- a/EasyPlayer/src/main/AndroidManifest.xml
+++ b/EasyPlayer/src/main/AndroidManifest.xml
@@ -24,13 +24,14 @@
             android:theme="@android:style/Theme.NoTitleBar"
             android:windowSoftInputMode="stateAlwaysHidden" />
 
-        <activity android:name=".activity.PlayerActivity">
+        <activity android:name=".activity.PlayerActivity"
+                android:screenOrientation="sensorLandscape"
+                android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
 
     </application>
 
