--- a/EasyPlayer/src/main/AndroidManifest.xml
+++ b/EasyPlayer/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             android:theme="@android:style/Theme.NoTitleBar"
             android:windowSoftInputMode="stateAlwaysHidden" />
 
-        <activity android:name=".activity.PlayerActivity"
+        <activity android:name=".activity.FullScreenPlayActivity"
                 android:screenOrientation="sensorLandscape"
                 android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
             <intent-filter>
