--- a/EasyPlayer/build.gradle
+++ b/EasyPlayer/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     compile 'com.ldoublem.loadingview:loadingviewlib:1.0'
+    compile 'com.inkapplications.viewpageindicator:library:2.4.3'
     compile project(':vitamio')
 }
