--- a/EasyPlayer/src/main/AndroidManifest.xml
+++ b/EasyPlayer/src/main/AndroidManifest.xml
@@ -17,12 +17,12 @@
         android:name=".EasyPlayer"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".activity.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <!--<activity android:name=".activity.MainActivity">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        <!--</activity>-->
 
         <activity
             android:name="io.vov.vitamio.activity.InitActivity"
@@ -34,7 +34,10 @@
         <activity android:name=".activity.FullScreenPlayActivity"
                 android:screenOrientation="sensorLandscape"
                 android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
-
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
 
